fixed alignment of header and search bar

--- a/css/sec1.css
+++ b/css/sec1.css
@@ -14,8 +14,8 @@
 
 .s1part1 {
     height: 7rem;
-    width: 80vw;
-    margin: 3.2rem;
+    width: 97%;
+    margin: 3.2rem 2%;
     border-radius: 2rem;
     background-color: #7D41E2;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.199);
